--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,4 +43,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.DataDome:datadome-android-package:1.6.3'
+    implementation "com.squareup.okhttp3:okhttp:3.14.0"
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
