--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,11 @@ issue_tracker: https://github.com/DataDome/datadome-flutter/issues
 documentation: https://docs.datadome.co/docs/flutter-plugin
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.20.0"
 
 dependencies:
-  http: ^0.12.2
+  http: ^0.13.3
   flutter:
     sdk: flutter
 
