--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: datadome
 description: A DataDome integration for Flutter.
-version: 1.0.5
+version: 1.0.5+1
 homepage: https://datadome.co
 repository: https://github.com/DataDome/datadome-flutter
 issue_tracker: https://github.com/DataDome/datadome-flutter/issues
 documentation: https://docs.datadome.co/docs/flutter-plugin
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.4 <3.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   http: ^0.13.3
@@ -35,7 +35,6 @@ flutter:
         pluginClass: DatadomePlugin
       ios:
         pluginClass: DatadomePlugin
-
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
