--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,7 +42,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.DataDome:datadome-android-package:1.6.3'
+    implementation 'co.datadome.sdk:sdk:1.8.0'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
