chore(android): update gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
+    // Use JVM Toolchain
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(8)
+        }
+    }
+
 }
 
 dependencies {
