chore(android): update gradle Java 11

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,7 +39,7 @@ android {
         disable 'InvalidPackage'
     }
 
-    ompileOptions {
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
