--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
-  http: ^1.0.0
+  http: ^0.13.3 # Keep this version for compatibility with Dart 2.x
   flutter:
     sdk: flutter
 
