--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: datadome
-description: A DataDome integration for Flutter.
+description: DataDome Flutter Plugin that integrates DataDome protection into Flutter apps, adapting the iOS and Android SDKs to secure your app's networking layer.
 version: 1.2.0
 homepage: https://datadome.co
 repository: https://github.com/DataDome/datadome-flutter
@@ -11,7 +11,7 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
-  http: ^0.13.3
+  http: ^0.13.3 # Keep this version for compatibility with Dart 2.x
   flutter:
     sdk: flutter
 
