--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: datadome
 description: DataDome Flutter Plugin that integrates DataDome protection into Flutter apps, adapting the iOS and Android SDKs to secure your app's networking layer.
-version: 1.2.0
+version: 2.0.0
 homepage: https://datadome.co
 documentation: https://docs.datadome.co/docs/flutter-plugin
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
-  flutter: ">=1.20.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
-  http: ^0.13.3 # Keep this version for compatibility with Dart 2.x
+  http: ^1.0.0
   flutter:
     sdk: flutter
 
