--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ description: Demonstrates how to use the datadome plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">3.0.0 <4.0.0"
+  sdk: ^3.0.0
 
 dependencies:
   http: ^1.0.0
