--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: datadome
 description: DataDome Flutter Plugin that integrates DataDome protection into Flutter apps, adapting the iOS and Android SDKs to secure your app's networking layer.
-version: 2.0.0
+version: 2.0.0-beta.0
 homepage: https://datadome.co
 documentation: https://docs.datadome.co/docs/flutter-plugin
 
