fix(int-5970): Fix podspec (#26)
* fix: set flutter dependency with an open upper bound

* fix: set podspec developer as DataDome

* fix: update native SDK dependency range

* fix: fix pubspec syntax

* chore(sample): update pods

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ documentation: https://docs.datadome.co/docs/flutter-plugin
 
 environment:
   sdk: ^3.0.0
-  flutter: ^3.0.0
+  flutter: ">=3.0.0"
 
 dependencies:
   http: ^1.0.0
